Scan picture pdf

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,7 @@ output_finance
 output_insurance
 test.ipynb
 local_bge_reranker_model
+pytesseract_env
+chi_tra.traineddata
+*.png
+finance_picture
